[package]
name = "packageurl"
version = "0.5.0-rc.1"
edition = "2018"
authors = [
    "Martin Larralde <martin.larralde@embl.de>",
    "Jens Reimann <ctron@dentrassi.de>",
]
license = "MIT"
description = "Rust implementation of the package url specification"
documentation = "https://docs.rs/packageurl"
repository = "https://github.com/althonos/packageurl-rs"
readme = "README.md"
keywords = ["purl", "package-url"]
categories = ["parser-implementations", "encoding", "development-tools"]
rust-version = "1.81.0" # due to litemap

[dependencies]
percent-encoding = "2.1.0"
thiserror = "1.0.0"

memchr = { version = "2.4.0", optional = true }
serde = { version = "1.0.0", optional = true, features = ["derive"] }

packageurl_0_3 = { version = "0.3.0", package = "packageurl", optional = true }

[features]
default = []
v0_3 = []

[dev-dependencies]
criterion = "0.5.1"
lazy_static = "^1.0.0"
rstest = "0.22.0"
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.13"
url = "2"
