[package]
name = "packageurl"
version = "0.5.0-rc.9"
edition = "2021"
authors = [
    "Martin Larralde <martin.larralde@embl.de>",
    "Jens Reimann <ctron@dentrassi.de>",
]
license = "MIT"
description = "Rust implementation of the package url specification"
documentation = "https://docs.rs/packageurl"
repository = "https://github.com/althonos/packageurl-rs"
readme = "README.md"
keywords = ["purl", "package-url"]
categories = ["parser-implementations", "encoding", "development-tools"]
rust-version = "1.81.0" # due to litemap

[dependencies]
percent-encoding = "2.1.0"
thiserror = "2.0.12"

memchr = { version = "2.4.0", optional = true }
serde = { version = "1.0.0", optional = true, features = ["derive"] }

[features]
default = []

[dev-dependencies]
criterion = "0.5.1"
lazy_static = "^1.0.0"
rstest = "0.25.0"
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.13"
url = "2"

[[bench]]
name = "bench"
harness = false
